--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@chainlink/contracts": "^0.7.1",
+    "@nomicfoundation/hardhat-ethers": "^3.0.4",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
@@ -15,5 +17,8 @@
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.6.2",
     "solidity-coverage": "^0.8.5"
+  },
+  "dependencies": {
+    "babel-eslint": "^10.1.0"
   }
 }
